Added several parameters to ImGui

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Parameters]
-Pos=818,82
+Pos=617,11
 Size=400,400
+Collapsed=0
+
+[Window][ImGui Demo]
+Pos=688,23
+Size=550,680
 Collapsed=0
 
